<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories_24dp"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user_24dp"
        android:title="@string/title_user" />

</menu>
